--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,17 @@ author-name: Ornella Vaccarelli
 # URL for the Image of the Author
 author-image: https://i1.rgstatic.net/ii/profile.image/670375440572434-1536841368863_Q512/Ornella-Vaccarelli.jpg
 # 60 Words About the Author
-author-about: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget pharetra velit, dapibus bibendum ex. Maecenas vitae laoreet mauris, ac luctus metus. Aliquam luctus velit vel ipsum feugiat, vel venenatis mauris hendrerit. Sed at vulputate sapien, eget vehicula dolor. Aliquam volutpat pulvinar neque sit amet sodales.
+author-about: <p><b> Welcome to my personal website! </p></b> <p>I am Ornella Vaccarelli, a post-doc in the <a href='https://www.tcpunilu.com/'>Theoretical Chemical Physics group</a>
+              at the University of Luxembourg, lead by Prof. Alexandre Tkatchenko.
+              I consider myself an ambitious and creative researcher with natural ability for critical thinking and complex problems solving.
+              As a curiosity-driven, enthusiast learner and skilled theoretical physicist, I am always motivated by new challenges, prompted to find clever solutions to multidisciplinar problems.</p>
+              <p>The combination of mathematical, computer science and physics skill obtained during the diffent and 
+              proficuous years of studying and working in research have allowed me to acquire additional persistence 
+              to my own ambition and motivation to perform excellent work, and to develop a wide variety of interests, 
+              also beyond my area of expertise. Moreover, I earn significant experience 
+              in scientific writing on high-impact-factor journals and in public speech at international conferences.
+              Thanks to my communication and team-working skills, I established fruitful collaborations, whilst working in various 
+              experimentally, computationally, and theoretically oriented multi-national groups. </p>
 # URL to the Author's Profile (i.e., Github, Twitter, Stackoverflow, etc)
 author-url: https://github.com/ovaccarelli
 
