--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ author-about: <p><b> Welcome to my personal website! </p></b> <p>I am Ornella Va
               <p>The combination of mathematical, computer science and physics skill obtained during the diffent and 
               proficuous years of studying and working in research have allowed me to acquire additional persistence 
               to my own ambition and motivation to perform excellent work, and to develop a wide variety of interests, 
-              also beyond my area of expertise. Moreover, I earn significant experience 
+              also beyond my area of expertise. Moreover, I earned significant experience 
               in scientific writing on high-impact-factor journals and in public speech at international conferences.
               Thanks to my communication and team-working skills, I established fruitful collaborations, whilst working in various 
               experimentally, computationally, and theoretically oriented multi-national groups. </p>
